# exip

./: .gitignore  CMakeLists.txt
cmake/: FindCheck.cmake
examples/simpleDecoding/: CMakeLists.txt
examples/simpleEncoding/: CMakeLists.txt  exipe-test-nested-xs2ex.exi  exipe-test-types-xs2ex.exi  exipe-test-xs2ex.exi
include/: errorHandle.h
platform/gcc/: Makefile
platform/vs2010/: exipConfig.h
src/common/: CMakeLists.txt
src/common/src/: ASCII_stringManipulate.c  dynamicArray.c  sTables.c
src/contentIO/: CMakeLists.txt
src/contentIO/src/: EXIParser.c  EXISerializer.c  bodyDecode.c  headerDecode.c  headerEncode.c  initSchemaInstance.c  sTableDefault.c  staticEXIOptions.c
src/grammar/: CMakeLists.txt
src/grammar/src/: grammars.c
src/grammarGen/: CMakeLists.txt
src/grammarGen/src/: genUtils.c  treeTableBuild.c  treeTableToGrammars.c
src/grammarGen/xmlSchema/: staticXmlSchema.c
src/streamIO/: CMakeLists.txt
src/streamIO/include/: streamDecode.h  streamEncode.h  streamRead.h  streamWrite.h
src/streamIO/src/: ioUtil.c  streamDecode.c  streamEncode.c  streamRead.c  streamWrite.c
tests/: CMakeLists.txt  README.txt  check_builtin_grammar.c  check_contentIO.c  check_emptyType.c  check_exip.c  check_grammar.c  check_profile.c  check_streamIO.c  check_strict_grammar.c  check_stringTables.c  check_xsi_type.c
utils/schemaHandling/: CMakeLists.txt  exipg.c
utils/xsd2exip/: pom.xml
utils/xsd2exip/src/main/java/org/acm/nhenehan/xsd2exip/: Main.java
utils/xsd2exip/src/test/java/org/acm/nhenehan/xsd2exip/: MainTest.java
