cmake_minimum_required (VERSION 2.8.12)
project (exip)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set (VERSION_MAJOR 0)
set (VERSION_MINOR 5)
set (VERSION_PATCH 5)
set (VERSION_BUILD b)

option(SKIP_TESTS "To build without building tests." OFF)
if (WIN32)
  set(SKIP_TESTS ON)
endif()

option(SKIP_VALGRIND "To build without valgrind tests." OFF)
if (WIN32)
  set(SKIP_VALGRIND ON)
endif()

#add_subdirectory (src/stringTables)
add_subdirectory (src/common)
add_subdirectory (src/streamIO)
add_subdirectory (src/contentIO)
add_subdirectory (src/grammar)
add_subdirectory (src/grammarGen)
add_subdirectory (utils/schemaHandling)
add_subdirectory (examples/simpleDecoding)
add_subdirectory (examples/simpleEncoding)

if(SKIP_TESTS)
    message("Skipping build of test cases")
else()
    include(CTest)
    add_subdirectory (tests)

    add_test(NAME check_xsi_type COMMAND check_xsi_type "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_stringTables COMMAND check_stringTables "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_strict_grammar COMMAND check_strict_grammar "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_streamIO COMMAND check_streamIO "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_profile COMMAND check_profile "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_grammar COMMAND check_grammar "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_exip COMMAND check_exip "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_emptyType COMMAND check_emptyType "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_contentIO COMMAND check_contentIO "${CMAKE_SOURCE_DIR}/tests/test-set")
    add_test(NAME check_builtin_grammar COMMAND check_builtin_grammar "${CMAKE_SOURCE_DIR}/tests/test-set")

    if(UNIX)
      add_test(NAME check_valgrind_xsi_type COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_xsi_type" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_stringTables COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_stringTables" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_strict_grammar COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_strict_grammar" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_streamIO COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_streamIO" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_profile COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_profile" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_grammar COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_grammar" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_exip COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_exip" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_emptyType COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_emptyType" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_contentIO COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_contentIO" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
      add_test(NAME check_valgrind_builtin_grammar COMMAND valgrind --leak-check=yes "${CMAKE_BINARY_DIR}/tests/check_builtin_grammar" "${CMAKE_SOURCE_DIR}/tests/test-set" 2> error.log 1> /dev/null)
    endif(UNIX)

endif(SKIP_TESTS)
